@@ -3,6 +3,8 @@ Pidgin and Finch: The Pimpin' Penguin IM Clients That're Good for the Soul
 version 2.10.12 (MM/DD/YY):
 	General:
 	* purple-url-handler now works with Python 3.x (Daniël van Eeden)
+	* Fixed an issue where transient startup statuses could be deleted
+	  (Jakub Adam) (#16762)
 
 	Pidgin:
 	* The shout smile now matches the default theme (Steve Vaught)
